2011-07-17  Robert Larice
 * src/include/hash.h ,
 * src/misc/hash.c :
   nghash cleanup

2011-07-18  Holger Vogt
 * cmath1.c, cmath1.h, cmath2.c, cmath2.h, parse.c, fteext.h:
   new complex functions sinh, cosh, tanh
 * evaluate.c: remove redundant call to cmath2.h

2011-07-10  Holger Vogt
 * main.c, ivars.c, /xspice/icm/analog/file_source/cfunc.mod:
   environmental variable NGSPICE_INPUT_DIR
   for additional search directory for input file

2011-07-10  Robert Larice
 * src/winmain.c ,
 * src/frontend/wdisp/winprint.c :
   cleanup integer type conversions

2011-07-10  Robert Larice
 * src/frontend/wdisp/windisp.c :
   SetWindowLongPtr() and SetClassLongPtr() for 64bit compatibility

2011-07-09  Holger Vogt
 * input.c: definition of _read only for Windows console

2011-07-09  Robert Larice
 * src/frontend/gens.c ,
 * src/frontend/subckt.c ,
 * src/frontend/numparam/xpressn.c ,
 * src/maths/sparse/spfactor.c ,
 * src/spicelib/parser/inpgtok.c ,
 * src/xspice/cm/cm.c :
   explicit `int' casts for some ptrdiff_t expressions, where an `int' seems to be big enough

2011-07-09  Robert Larice
 * src/ngsconvert.c ,
 * src/misc/misc_time.c :
   some explicit `int' casts

2011-07-09  Robert Larice
 * src/spicelib/devices/ltra/ltraacld.c ,
 * src/frontend/trannoise/1-f-code.c :
   some long versus int type fixes

2011-07-09  Robert Larice
 * src/frontend/com_fft.c :
   possibly inexact long -> double cast

2011-07-09  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c' :
   remove unused global artifact `dynLlen'

2011-07-09  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/winmain.c :
   cleanup integer type conversions

2011-07-09  Robert Larice
 * src/ngsconvert.c ,
 * src/frontend/inp.c ,
 * src/frontend/nutinp.c ,
 * src/frontend/outitf.c ,
 * src/frontend/help/readhelp.c :
   cleanup fseek() usage

2011-07-08  Holger Vogt
 * display.c: replace error message by appropriate warning, if compiled